# server/docs/swagger.json
@@ -14,6 +14,62 @@
     },
     "basePath": "/",
     "paths": {
+        "/v1/api/admin/login": {
+            "post": {
+                "description": "用户登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Base"
+                ],
+                "summary": "用户登录",
+                "operationId": "/v1/api/admin/login",
+                "parameters": [
+                    {
+                        "description": "用户名,密码,验证码,验证码ID",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.LoginParam"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/api/admin/register": {
+            "post": {
+                "description": "用户注册",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Base"
+                ],
+                "summary": "用户注册",
+                "operationId": "/v1/api/admin/register",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterParam"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/v1/api/captcha": {
             "get": {
                 "security": [
@@ -85,62 +141,6 @@
                     "Base"
                 ],
                 "summary": "获取配置",
-                "responses": {}
-            }
-        },
-        "/v1/api/login": {
-            "post": {
-                "description": "用户登录",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Base"
-                ],
-                "summary": "用户登录",
-                "operationId": "/v1/user/login",
-                "parameters": [
-                    {
-                        "description": "用户名,密码,验证码,验证码ID",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.LoginParam"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/v1/user/register": {
-            "post": {
-                "description": "用户注册",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "SysUser"
-                ],
-                "summary": "用户注册",
-                "operationId": "/v1/user/register",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.RegisterParam"
-                        }
-                    }
-                ],
                 "responses": {}
             }
         }
@@ -253,7 +253,11 @@
                 },
                 "meta": {
                     "description": "Meta 源数据,存储如请求ID,分页等信息",
-                    "$ref": "#/definitions/response.Meta"
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/response.Meta"
+                        }
+                    ]
                 },
                 "msg": {
                     "description": "提示信息",
