# server/router/system/sys_user.go
@@ -3,21 +3,17 @@ package system
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/zhengpanone/gin-vue3-admin/api/v1/system"
-	"github.com/zhengpanone/gin-vue3-admin/middleware"
 )
 
-func InitUserRouter(engine *gin.Engine) {
-	userRouter := engine.Group("v1/user")
+type UserRouter struct{}
+
+func (u *UserRouter) InitUserRouter(Router *gin.RouterGroup) (R gin.IRouter) {
+	userRouter := Router.Group("v1/api/admin")
 
 	{
-
-		userRouter.POST("register", system.Register)             // 用户注册
 		userRouter.POST("changePassword", system.ChangePassword) //用户修改密码
-
+		userRouter.POST("detail", system.GetUser)
 	}
-	tokenGroup := engine.Group("v1/user").Use(middleware.JWTAuthMiddleware())
-	{
-		tokenGroup.POST("/detail", system.GetUser)
-	}
+	return userRouter
 
 }
